# openfix-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
example/custom-dict/: Cargo.toml  ZE_CORP.xml  build.rs
example/custom-dict/src/: lib.rs
openfix-messages/: Cargo.toml  build.rs
openfix-messages/benches/: deserialize.rs  serialize_empty_trailers.rs
openfix-messages/src/: dec_helpers.rs  enc_helpers.rs  lib.rs
openfix-messages/tests/: deserialize.rs  serialize_empty_trailers.rs  serialize_with_trailers.rs
openfix-spec-generator/: Cargo.toml
openfix-spec-generator/src/: lib.rs
protocol-spec/: FIX40.xml  FIX41.xml  FIX42.xml  FIX43.xml  FIX44.xml  FIXT11.xml  TEST_SPEC.xml  TEST_SPEC_SIG.xml
quickfix-messages/: Cargo.toml  build.rs
quickfix-messages/benches/: deserialize.rs  serialize.rs  serialize_empty_trailers.rs
quickfix-messages/src/: dec_helpers.rs  enc_helpers.rs  lib.rs
quickfix-messages/tests/: deserialize.rs  serialize_empty_trailers.rs  serialize_with_trailers.rs  test_serialize.rs
quickfix-rs/: Cargo.toml  build.rs
quickfix-rs/src/: lib.rs
quickfix-spec-generator/: Cargo.toml
quickfix-spec-generator/src/: lib.rs
scripts/: patch_spec.sh
