[package]
name = "openfix-messages"
version = "0.1.0"
authors = ["Arthur LE MOIGNE <arthur.lemoigne@gmail.com>"]
edition = "2018"

[dependencies]
chrono = "0.4"
thiserror = "1.0"

[build-dependencies]
openfix-spec-generator = { path = "../openfix-spec-generator" }

[dev-dependencies]
openfix-messages= { path = ".", features = ["test_spec"] }
anyhow = "1.0"

[features]
default = []
all = [ "fixt11", "fix40", "fix41", "fix42", "fix43", "fix44"]

fixt11 = []
fix40 = []
fix41 = []
fix42 = []
fix43 = []
fix44 = []

test_spec = []
