[package]
name = "quickfix-messages"
version = "0.1.0"
authors = ["Arthur LE MOIGNE <arthur.lemoigne@gmail.com>"]
edition = "2018"

[dependencies]
chrono = "0.4"
thiserror = "1.0"
format-bytes = "0.2.0"

[build-dependencies]
quickfix-spec-generator = { path = "../quickfix-spec-generator" }

[dev-dependencies]
quickfix-messages= { path = ".", features = ["test_spec"] }

[features]
default = []
all = [ "fixt11", "fix40", "fix41", "fix42", "fix43", "fix44"]

fixt11 = []
fix40 = []
fix41 = []
fix42 = []
fix43 = []
fix44 = []

test_spec = []
