[package]
name = "quickfix-spec-generator"
version = "0.1.0"
authors = ["Arthur LE MOIGNE <arthur.lemoigne@gmail.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
quick-xml = { version = "0.21", features = [ "serialize" ] }
anyhow = "1.0"
convert_case = "0.4"
syn = "1.0"
