[package]
name = "custom-dict"
version = "0.1.0"
authors = ["Arthur LE MOIGNE <arthur.lemoigne@gmail.com>"]
edition = "2018"

[dependencies]
chrono = "0.4"
quickfix-messages = { path = "../../quickfix-messages", features = [ "fix44" ] }

[build-dependencies]
quickfix-spec-generator = { path = "../../quickfix-spec-generator" }